# ml-model-api-template

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  build_run_api_image.sh  conftest.py  create_ACI.sh  delete_postgres_azure_ml.sh  docker-compose.yml  env_template.txt  get_credentials.sh  get_credentials_2.sh  index.html  mkdocs.yml  model_name.json  objects.inv  pyproject.toml  requirements.txt  search.html  setup.sh  sitemap.xml  try.py
.github/.workflows/: cd.example
.github/workflows/: api_continuous_delivery.yaml  api_continuous_deployment.yaml  api_continuous_integration.yaml  api_deployment.yaml  app_web_continuous_deployment.yaml  app_web_continuous_integration.yaml  app_web_deployment.yaml  cd.yaml  cdelivery.yaml  cdeployment.yaml  ci.yaml  continuous_delivery.yaml  continuous_deployment.yaml  continuous_integration.yaml  deployment.yaml  doc_creation.yaml  login_azure.yaml  main.yml  readme.md
ML_master/: deploy.sh  setup.py
analyse/: 3_modelisation.py  5_use_model.py
api/: Dockerfile  README_ONNX.md  api_prediction.md  database.py  launch_app.sh  main.py  model_loader.py  opentelemetry_setup.py  predict.py  remote_run.pkl  requirements.txt  run.py  utils.py  workflow-ci.md
api/database/: authentificate.py  core.py  (+1 more)
api_3/: main.py
app_web/: Dockerfile  pytest.ini  requirements.txt
azure_db_building/: create_sql_server.sh  create_table.sql  create_tables.sh  delete_sql_server.sh  import_data.sh  test_db.py
docs/: index.md
ml_ops/: dashboard.py  database.py
model/: create_mlflow_azure.sh  data_cleaning.py  feature_engineering.py  main.py  modelisation.py  test_quality.py  train.sh  training.py  ut_ml.py  utils.py
modele/: data_cleaning.py  feature_engineering.py  main.py  modelisation.py  test_cleaning.py  test_feature_engineering.py  test_quality.py  train.sh  training.py
scripts/: build_app_web_image.sh  build_run_api_image.sh  get_credentials.sh
search/: search_index.json
sql_queries/: request_customers.sql
terraform/: main.tf  outputs.tf  variables.tf
(+65 files in other folders)
